test/Fail/UnequalTerms.err
UnequalTerms.agda:9.8-12: error: [UnequalTerms]
The terms
  0
and
  1
are not equal at type Nat
when checking that the expression zero has type IsZero 1
